[gd_scene load_steps=2 format=3 uid="uid://73afp7wgs56o"]

[ext_resource type="Script" uid="uid://clr5jo0tvwkqc" path="res://scripts/GameReflex.gd" id="1_67g68"]

[node name="Reflex" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_67g68")

[node name="SpawnArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 131.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SpawnArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -167.5
offset_right = 200.0
offset_bottom = 167.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimerSpawn" type="Timer" parent="CanvasLayer"]

[node name="LabelScore" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="TimerGame" type="Timer" parent="CanvasLayer"]
wait_time = 15.0
one_shot = true

[node name="LabelTimer" type="Label" parent="CanvasLayer"]
offset_left = 858.0
offset_top = 445.0
offset_right = 898.0
offset_bottom = 468.0

[node name="TimerDisplay" type="Timer" parent="CanvasLayer"]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="CanvasLayer/TimerSpawn" to="." method="_on_spawn_timer_timeout"]
